Attempt to change to single MemorySegment for slots